--- a/packages/provider-http/package.json
+++ b/packages/provider-http/package.json
@@ -11,13 +11,16 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "vitest"
   },
   "dependencies": {
     "@api-def/core": "workspace:^",
     "query-string": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@vitest/coverage-v8": "^1.5.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.0"
   }
 }
