chore(provider-http): add custom script for vitest --coverage

--- a/packages/provider-http/package.json
+++ b/packages/provider-http/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@api-def/core": "workspace:^",
